--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -83,3 +83,9 @@
   background: #00ff00;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 527px) {
+    .terminal-body {
+        font-size: 0.8em;
+    }
+}
